# sam-lora-cardiac-mri

./: .gitignore  STATUS.md  pyproject.toml
configs/: cross_eval.yaml  data_acdc.yaml  eval_zero_shot.yaml  lora_rank16.yaml  lora_rank4.yaml  lora_rank8.yaml  lora_rank8_decoder.yaml
docs/: DOCUMENTATIE_TEHNICA.md  README.md  Thesis.md  proposal.md
metadata/: Untitled.java
scripts/: prepare_acdc.sh  run_grid_eval.sh  setup_env.sh
src/cli/: __init__.py  convert_dicom.py  eval_cross_datasets.py  eval_per_structure.py  eval_zero_shot.py  make_figures.py  train_lora.py
src/sam_lora/: __init__.py  data.py  lora.py  metrics.py  preprocess.py  prompts.py  sam_wrapper.py  visualize.py
src/sam_lora_acdc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_metrics.py  test_prompts.py
